oreilly-k8s/nginx-ingress-lab/ingress-single.yaml
# This is a * rule
# curl $INGRESS_URL/webapp1 will work
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: single-route
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /webapp1
        pathType: Prefix
        backend:
          service:
            name: webapp1-svc
            port:
              number: 80
